Commit adicionando toda a logica